force-app/main/default/objects/Account/fields/CA_AbriuRA__c.field-meta.xml
<CustomField>
    <fullName>CA_AbriuRA__c</fullName>
    <label>abriu RA?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>