force-app/main/default/objects/Account/fields/CA_Agencia__c.field-meta.xml
<CustomField>
    <fullName>CA_Agencia__c</fullName>
    <label>Agência</label>
    <length>50</length>
    <type>Text</type>
</CustomField>