force-app/main/default/objects/Account/fields/CA_AssistenteAlugueis__c.field-meta.xml
<CustomField>
    <fullName>CA_AssistenteAlugueis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assistente Aluguéis</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>