force-app/main/default/objects/Account/fields/CA_Bairro__c.field-meta.xml
<CustomField>
    <fullName>CA_Bairro__c</fullName>
    <label>Bairro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>