force-app/main/default/objects/Account/fields/CA_Banco__c.field-meta.xml
<CustomField>
    <fullName>CA_Banco__c</fullName>
    <label>Banco</label>
    <length>50</length>
    <type>Text</type>
</CustomField>