force-app/main/default/objects/Account/fields/CA_CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CA_CNPJ__c</fullName>
    <externalId>true</externalId>
    <label>CNPJ</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>