force-app/main/default/objects/Account/fields/CA_ComplementoEndereco__c.field-meta.xml
<CustomField>
    <fullName>CA_ComplementoEndereco__c</fullName>
    <label>Complemento Endereço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>