force-app/main/default/objects/Account/fields/CA_Conta__c.field-meta.xml
<CustomField>
    <fullName>CA_Conta__c</fullName>
    <label>Conta Bancária</label>
    <length>50</length>
    <type>Text</type>
</CustomField>