force-app/main/default/objects/Account/fields/CA_CPF__c.field-meta.xml
<CustomField>
    <fullName>CA_CPF__c</fullName>
    <externalId>true</externalId>
    <label>CPF</label>
    <length>11</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>