force-app/main/default/objects/Account/fields/CA_CSAT__c.field-meta.xml
<CustomField>
    <fullName>CA_CSAT__c</fullName>
    <label>CSAT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>