force-app/main/default/objects/Account/fields/CA_Dataabertura__c.field-meta.xml
<CustomField>
    <fullName>CA_Dataabertura__c</fullName>
    <label>Data de Abertura</label>
    <type>Date</type>
</CustomField>