force-app/main/default/objects/Account/fields/CA_DataFalecimento__c.field-meta.xml
<CustomField>
    <fullName>CA_DataFalecimento__c</fullName>
    <label>Data de Falecimento</label>
    <type>Date</type>
</CustomField>