force-app/main/default/objects/Account/fields/CA_DataNascimento__c.field-meta.xml
<CustomField>
    <fullName>CA_DataNascimento__c</fullName>
    <label>Data de Nascimento</label>
    <type>Date</type>
</CustomField>