force-app/main/default/objects/Account/fields/CA_Email__c.field-meta.xml
<CustomField>
    <fullName>CA_Email__c</fullName>
    <description>E-mail Principal</description>
    <label>E-mail</label>
    <type>Email</type>
</CustomField>