force-app/main/default/objects/Account/fields/CA_EnderecoPrincipal__c.field-meta.xml
<CustomField>
    <fullName>CA_EnderecoPrincipal__c</fullName>
    <description>Rua/Avenida, Nome da Rua, Número - Complemento (Endereço completo)</description>
    <label>Endereço Principal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>