force-app/main/default/objects/Account/fields/CA_EstadoCivil__c.field-meta.xml
<CustomField>
    <fullName>CA_EstadoCivil__c</fullName>
    <label>Estado Civil</label>
    <length>50</length>
    <type>Text</type>
</CustomField>