force-app/main/default/objects/Account/fields/CA_GestorContaAlugueis__c.field-meta.xml
<CustomField>
    <fullName>CA_GestorContaAlugueis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gestor De Conta Aluguéis</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>