force-app/main/default/objects/Account/fields/CA_InscricaoEstadual__c.field-meta.xml
<CustomField>
    <fullName>CA_InscricaoEstadual__c</fullName>
    <label>Inscrição Estadual</label>
    <length>100</length>
    <type>Text</type>
</CustomField>