force-app/main/default/objects/Account/fields/CA_InscricaoMunicipal__c.field-meta.xml
<CustomField>
    <fullName>CA_InscricaoMunicipal__c</fullName>
    <label>Inscrição Municipal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>