force-app/main/default/objects/Account/fields/CA_MargemContribuicaoAlugueis__c.field-meta.xml
<CustomField>
    <fullName>CA_MargemContribuicaoAlugueis__c</fullName>
    <label>Margem Contribuição Aluguéis</label>
    <length>10</length>
    <type>Text</type>
</CustomField>