force-app/main/default/objects/Account/fields/CA_Nacionalidade__c.field-meta.xml
<CustomField>
    <fullName>CA_Nacionalidade__c</fullName>
    <label>Nacionalidade</label>
    <length>50</length>
    <type>Text</type>
</CustomField>