force-app/main/default/objects/Account/fields/CA_Naturezajuridica__c.field-meta.xml
<CustomField>
    <fullName>CA_Naturezajuridica__c</fullName>
    <label>Natureza Jurídica</label>
    <length>100</length>
    <type>Text</type>
</CustomField>