force-app/main/default/objects/Account/fields/CA_Nome__c.field-meta.xml
<CustomField>
    <fullName>CA_Nome__c</fullName>
    <description>Nome completo</description>
    <label>Nome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>