force-app/main/default/objects/Account/fields/CA_NomeEmpresa__c.field-meta.xml
<CustomField>
    <fullName>CA_NomeEmpresa__c</fullName>
    <description>No caso de Pessoa Jurídica.</description>
    <label>Nome Fantasia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>