force-app/main/default/objects/Account/fields/CA_NotaNPS__c.field-meta.xml
<CustomField>
    <fullName>CA_NotaNPS__c</fullName>
    <label>Nota do NPS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>