force-app/main/default/objects/Account/fields/CA_NumeroEndereco__c.field-meta.xml
<CustomField>
    <fullName>CA_NumeroEndereco__c</fullName>
    <label>Número Endereço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>