force-app/main/default/objects/Account/fields/CA_PerfilAlugueis__c.field-meta.xml
<CustomField>
    <fullName>CA_PerfilAlugueis__c</fullName>
    <label>Perfil Aluguéis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Essencial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>