force-app/main/default/objects/Account/fields/CA_Preferenciacontato__c.field-meta.xml
<CustomField>
    <fullName>CA_Preferenciacontato__c</fullName>
    <label>Preferência de contato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
            <value>
                <fullName>Telefone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>