force-app/main/default/objects/Account/fields/CA_Profissao__c.field-meta.xml
<CustomField>
    <fullName>CA_Profissao__c</fullName>
    <label>Profissão</label>
    <length>100</length>
    <type>Text</type>
</CustomField>