force-app/main/default/objects/Account/fields/CA_Representante__c.field-meta.xml
<CustomField>
    <fullName>CA_Representante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Representante Financeiro</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>