force-app/main/default/objects/Account/fields/CA_RepresentanteAdministrativo__c.field-meta.xml
<CustomField>
    <fullName>CA_RepresentanteAdministrativo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Representante Administrativo</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Representante Administrativo)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>