force-app/main/default/objects/Account/fields/CA_Situacaocadastral__c.field-meta.xml
<CustomField>
    <fullName>CA_Situacaocadastral__c</fullName>
    <label>Situação Cadastral</label>
    <length>100</length>
    <type>Text</type>
</CustomField>