force-app/main/default/objects/Account/fields/CA_Telefone__c.field-meta.xml
<CustomField>
    <fullName>CA_Telefone__c</fullName>
    <description>Lista  - DDD (I) + TELEFONE</description>
    <label>Telefone</label>
    <type>Phone</type>
</CustomField>