force-app/main/default/objects/Account/fields/CA_Telefonecomercial__c.field-meta.xml
<CustomField>
    <fullName>CA_Telefonecomercial__c</fullName>
    <description>Lista  - DDD (I) + TELEFONE</description>
    <label>Telefone Comercial</label>
    <type>Phone</type>
</CustomField>