force-app/main/default/objects/Account/fields/CA_TipoConta__c.field-meta.xml
<CustomField>
    <fullName>CA_TipoConta__c</fullName>
    <label>Tipo de Conta</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Proprietário</fullName>
            </value>
            <value>
                <fullName>Inquilino</fullName>
            </value>
            <value>
                <fullName>Fiador</fullName>
            </value>
            <value>
                <fullName>Representante</fullName>
            </value>
            <value>
                <fullName>Procurador</fullName>
            </value>
            <value>
                <fullName>Síndico</fullName>
            </value>
            <value>
                <fullName>Fornecedor</fullName>
            </value>
            <value>
                <fullName>Locatário Extra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>