force-app/main/default/objects/Account/fields/CA_TipoContaBancaria__c.field-meta.xml
<CustomField>
    <fullName>CA_TipoContaBancaria__c</fullName>
    <description>Corrente/Poupança</description>
    <label>Tipo de Conta Bancária</label>
    <length>50</length>
    <type>Text</type>
</CustomField>