force-app/main/default/objects/Account/fields/CA_Visita__c.field-meta.xml
<CustomField>
    <fullName>CA_Visita__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visita</label>
    <referenceTo>CA_Visita__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>