force-app/main/default/objects/Account/fields/CA_Whatsapp__c.field-meta.xml
<CustomField>
    <fullName>CA_Whatsapp__c</fullName>
    <description>Lista  - DDD (I) + TELEFONE</description>
    <label>Whatsapp</label>
    <type>Phone</type>
</CustomField>