force-app/main/default/objects/Account/fields/UserAccount__c.field-meta.xml
<CustomField>
    <fullName>UserAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Este campo é usado para designar o usuário atrelado a esta conta. Utiliza-se este campo no fluxo de transbordar a sessão de mensagem para o gestor da conta.</description>
    <inlineHelpText>Este campo é usado para designar o usuário atrelado a esta conta.</inlineHelpText>
    <label>Usuário da conta</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserAccount</relationshipName>
    <type>Lookup</type>
</CustomField>