force-app/main/default/objects/Account/recordTypes/CA_Fisica.recordType-meta.xml
<RecordType>
    <fullName>CA_Fisica</fullName>
    <active>true</active>
    <label>Física</label>
</RecordType>