force-app/main/default/objects/Account/recordTypes/CA_PessoaJuridica.recordType-meta.xml
<RecordType>
    <fullName>CA_PessoaJuridica</fullName>
    <active>true</active>
    <label>Jurídica</label>
</RecordType>