force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>CA_TipoConta__c</columns>
    <columns>CA_PerfilAlugueis__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>CA_CPF__c</columns>
    <columns>CA_CNPJ__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas as contas</label>
</ListView>